<resources>
    <string name="app_name">Split Bill</string>
    <string name="unique_id">Unique Id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bill_shares">Bill Shares</string>
    <string name="balances">Balances</string>
    <string name="groups">Groups</string>
    <string name="people">People</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="total">Total</string>
    <string name="spent">Spent</string>
    <string name="share">Share</string>
    <string name="add_member">Add Member</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="add_bill">Add Bill</string>
    <string name="total_amount">Total Amount</string>
    <string name="link_member">Link Member</string>
    <string name="enter_id">Enter #ID</string>
    <string name="link">Link</string>
    <string name="delete">Delete</string>
</resources>