<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.user_list.AddGroupDialogFragment">


        <TextView
            android:id="@+id/tv_create_group"
            style="@style/TextStyleHeadMediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Common.OutlinedMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/btn_create"
            app:layout_constraintEnd_toStartOf="@+id/btn_create"
            app:layout_constraintTop_toTopOf="@+id/btn_create" />

        <Button
            android:id="@+id/btn_create"
            style="@style/Common.NormalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_group_name"
            style="@style/Common.TextInputLayoutEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/til_total_amount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_name"
                style="@style/Common.TextInputLayoutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_total_amount"
            style="@style/Common.TextInputLayoutEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            android:hint="@string/total_amount"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/til_group_name"
            app:layout_constraintTop_toBottomOf="@+id/btn_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_total_amount"
                style="@style/Common.TextInputLayoutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bill_shares"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_group_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>